--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -5,7 +5,6 @@ on:
       - main
     paths-ignore:
       - README.md
-      - .github/**
   workflow_dispatch:
 
 env:
@@ -22,6 +21,13 @@ jobs:
      id-token: write
     steps:
       - name: Bump version (if needed)
+        if: github.event_name == 'push'
+        uses: TriPSs/conventional-changelog-action@v3
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          skip-commit: "true"
+
+      - name: Create GitHub release (if needed)
         if: github.event_name == 'push'
         uses: google-github-actions/release-please-action@v3
         with:
