--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,5 +8,6 @@ services:
       - RENTBOT_GSHEETS_KEY_PATH=/tmp/gcp_key.json
     volumes:
       - "${HOST_GSHEETS_KEY_PATH}:/tmp/gcp_key.json"
+      - "./app:/app"
     ports:
       - 5000:80
