--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -17,7 +17,9 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     permissions:
-     contents: read
+     contents: write
+     deployments: write
+     packages: write
      id-token: write
     steps:
       - name: Checkout repository
