--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,8 +13,14 @@ dependencies = [
 
 [dependency-groups]
 dev = [
-    "autopep8>=2.3.1",
-    "flake8>=2.5.5",
     "isort>=5.13.2",
+    "poethepoet>=0.30.0",
     "pytest>=8.3.4",
+    "ruff>=0.9.2",
 ]
+
+[tool.poe.tasks]
+_format = "ruff format"
+_isort = "isort ."
+_lint = "ruff check --fix"
+lint = ["_format", "_isort", "_lint"]
