--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,9 +5,8 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.8"
 dependencies = [
-    "flask>=3.0.3",
+    "fastapi[standard]>=0.115.7",
     "gspread==6.1.3",
-    "gunicorn>=23.0.0",
     "requests>=2.32.3",
 ]
 
