--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.8"
 dependencies = [
     "fastapi[standard]>=0.115.7",
     "gspread==6.1.3",
+    "python-dotenv>=1.0.1",
     "requests>=2.32.3",
 ]
 
