--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,12 @@ requires-python = ">=3.8"
 dependencies = [
     "fastapi[standard]>=0.115.7",
     "gspread==6.1.3",
+    "lxml>=5.3.0",
+    "pandas>=2.0.3",
+    "pandera>=0.22.1",
     "python-dotenv>=1.0.1",
     "requests>=2.32.3",
+    "seleniumbase>=4.34.1",
 ]
 
 [dependency-groups]
