updated example.env with new env vars

--- a/example.env
+++ b/example.env
@@ -1,5 +1,12 @@
 GROUPME_TOKEN="your GroupMe token for your app"
 GROUPME_BOT_ID="your GroupMe bot's ID"
+CENTENNIAL_APARTMENT_USERNAME="your username to centennialplaceapartments.securecafe.com"
+CENTENNIAL_APARTMENT_PASSWORD="your password for the above"
+GEORGIA_POWER_USERNAME="your username to the Georgia Power website"
+GEORGIA_POWER_PASSWORD="your password for the above"
+XFINITY_USERNAME="your username for xfinity.com"
+XFINITY_PASSWORD="your password for the above"
 RENTBOT_GSHEETS_URL="the link to your Google Sheet"
+RENTBOT_START_TIME="2025-01-01"
 
 HOST_GSHEETS_KEY_PATH="the path on your host machine to your GCP service account with access to Google Sheets"
