move RENTBOT_GSHEETS_KEY back to being a secret reference due to multiple issues w/ it being parsed as an env var

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -67,13 +67,13 @@ jobs:
           image: ${{ steps.docker-build.outputs.image }}:latest
           region: ${{ env.GCP_REGION }}
           secrets: |-
+            RENTBOT_GSHEETS_KEY=RENTBOT_GSHEETS_KEY_PROD:latest
             CENTENNIAL_APARTMENT_PASSWORD=CENTENNIAL_APARTMENT_PASSWORD:latest
             GEORGIA_POWER_PASSWORD=GEORGIA_POWER_PASSWORD:latest
             XFINITY_PASSWORD=XFINITY_PASSWORD:latest
           env_vars: |-
             RENTBOT_START_TIME=2021-08-01
             GROUPME_BOT_ID=${{ secrets.GROUPME_BOT_ID }}
-            RENTBOT_GSHEETS_KEY=${{ secrets.RENTBOT_GSHEETS_KEY }}
             RENTBOT_GSHEETS_URL=${{ secrets.RENTBOT_GSHEETS_URL }}
             CENTENNIAL_APARTMENT_USERNAME=${{ secrets.CENTENNIAL_APARTMENT_USERNAME }}
             GEORGIA_POWER_USERNAME=${{ secrets.GEORGIA_POWER_USERNAME }}
